# claude-code-dev-logger

./: .gitignore  CLAUDE.md.backup  README.md  README_TESTS.md  RUST_DESIGN_SPEC.md  init-claude.sh  requirements.txt  run_tests.py  session_analyzer.py  setup.py  test_claude_logger.py  test_claude_logger_simple.py  test_fixtures.py  test_session_analyzer.py  uninstall-claude-sdd.sh
.conversation/: 2025-01-24_16-35-00_conversation_summary.md
claude-logger/: Cargo.toml
claude-logger/src/: analyzer.rs  cli.rs  git.rs  lib.rs  logger.rs  main.rs  patterns.rs  session.rs
claude_logger/: __init__.py  cli.py  logger.py
docs/: WORKING_TESTS_SUMMARY.md
scripts/: install.sh
tests/: __init__.py  fixtures.py  test_analyzer.py  test_logger.py
