[package]
name = "claude-logger"
version = "0.1.0"
edition = "2024"
authors = ["Claude Code Dev Logger Team"]
description = "Claude Code conversation logging and analysis tool"
license = "MIT"
repository = "https://github.com/benjamin-rood/claude-code-dev-logger"

[[bin]]
name = "claude-logger"
path = "src/main.rs"

[dependencies]
# CLI parsing
clap = { version = "4.4", features = ["derive"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"

# Cross-platform directories
dirs = "5.0"

# Pattern matching
regex = "1.10"

[dev-dependencies]
# Testing utilities
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
